app.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Inter', sans-serif;
    -webkit-tap-highlight-color: transparent;
}

body {
    background-color: #F1F1F1;
}

.header {
    background-color: #1A1A1A;
}

.nav-bar {
    display: flex;
    justify-content: space-between;
    padding: 12px 16px;
    max-height: 56px;
}

.company-logo-mobile {
    display: none;
}

.search-input-container {
    display: flex;
    align-items: baseline;
    width: 50%;
    max-width: 480px;
    position: relative;
}

.search-icon-wrapper {
    position: absolute;
    left: 10px;
    top: 18%;
}

.search-input-container form {
    width: 100%;
}

.search-input-container .input-field {
    background-color: #303030;
    color: #B5B5B5;
    border: 1px solid #616161;
    width: 100%;
    max-height: 32px;
    padding: 8px 0;
    padding-left: 35px;
    border-radius: 8px;
    outline: none;
}

.search-input-container .input-field:hover {
    border: 1px solid #E1E1E1;
}

.search-input-container .input-field:focus {
    border: 2px solid #fff;
}

.search-input-container ::placeholder {
    color: #B5B5B5;
}

.user-info {
    display: flex;
    /* align-content: center; */
}



.notification-wrapper button {
    background-color: #303030;
    padding: 8px;
    border-radius: 8px;
    max-height: 32px;
    margin-right: 7px;
    outline: none;
    border: none;
    /* cursor: pointer; */
}

.notification-wrapper button:hover {
    background-color: #616161;
}

.notification-wrapper button:focus {
    background-color: #656266;
    box-shadow: 0px 0px 0px 3px #005BD3, 0px 0px 0px 1px #000;
}

.notification-wrapper img {
    width: 16px;
}

.userInfo-wrapper {
    background-color: #303030;
    display: flex;
    /* padding: 8px 0; */
    border-radius: 8px;
    align-items: center;
    max-height: 32px;
    min-width: 142px;
    cursor: pointer;
    border: 0;
    outline: 0;
}

.userInfo-wrapper:hover {
    background-color: #616161;
}

.userInfo-wrapper:focus {
    background-color: #656266;
    box-shadow: 0px 0px 0px 3px #005BD3, 0px 0px 0px 1px #000, 0px -1px 0px 0px #B5B5B5 inset;
    /* box-shadow: 0px 0px 0px 3px #005BD3, 0px 0px 0px 1px #FFF, 0px -1px 0px 0px #B5B5B5 inset; */
}

.userInfo-wrapper p {
    color: #E3E3E3;
    font-size: 12px;
    padding: 0 10px;
    
}

.userInfo-wrapper .name-initials {
    background-color: #36FBA1;
    color: rgba(0, 0, 0, 0.40);
    border-radius: 6px;
    font-size: 12px;
    padding: 6.67px 5.34px;
}

/* Main Section */

.page-content-wrapper {
    width: 90%;
    max-width: 800px;
    margin: 0 auto;
    padding-bottom: 32rem;
}

.trial-popup {
    background-color: #1A1A1A;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 12px 16px;
    margin-top: 28px;
    max-height: 56px;
    min-height: 56px;
    border-radius: 8px;
}

.trial-popup p {
    color: #E3E3E3;
    font-weight: 500;
    font-size: 13px;
}

.trial-options {
    display: flex;
    align-items: center;
}

.trial-options .plan-btn {
    background-color: #fff;
    color: #323232;
    border: 1px solid rgba(0, 0, 0, 0.10);
    border-radius: 6px;
    display: flex;
    align-items: center;
    font-size: 12px;
    font-weight: 600;
    max-height: 28px;
    padding: 8px 12px;
    box-shadow: 0px -1px 0px 0px #B5B5B5 inset;
}

.trial-options .plan-btn:hover {
    background-color: #F7F7F7;
    box-shadow: 0px -1px 0px 0px #B5B5B5 inset;
}

.trial-options .plan-btn:focus {
    background-color: #fff;
    box-shadow: 0px 0px 0px 3px #005BD3, 0px 0px 0px 1px #FFF, 0px -1px 0px 0px #B5B5B5 inset;
}

.remove-popup-wrapper img {
    margin-left: 14px;
    position: relative;
    top: 3px;
    cursor: pointer;
}

/* Setup Guide */

.setup-guide-accordion {
    width: 100%;
    padding-top: 16px;
    position: relative;
}

.setup-guide-list-wrapper {
    background-color: #fff;
    position: relative;
    width: 100%;
    border: 1px solid #DBDBDB;
    border-radius: 18px;
    overflow: hidden;
    max-height: 106px;
    /* max-height: 3000px; */
    box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.05);
}

.setup-guide-list-wrapper.active {
    max-height: 2000px;
}

.setup-guide-label {
    display: flex;
    justify-content: space-between;
    cursor: pointer;
    max-height: 106px;
    /* min-height: 106px; */
    padding: 16px;
    padding-right: 10px;
    border-radius: 18px;
}

.setup-guide-label .dropdown-icon-container {
    background-color: #fff;
    display: inline-block;
    width: 32px;
    min-height: 32px;
    max-height: 32px;
    border: 1px solid transparent;
    outline: none;
    cursor: pointer;
}

.setup-guide-label .dropdown-icon-container:hover {
    background-color: #F1F1F1;
    border: 1px solid transparent;
    border-radius: 8px;
    
}

.setup-guide-label .dropdown-icon-container:focus {
    background-color: #fff;
    border: 2px solid #005BD3;
    border-radius: 8px;
}

.setup-guide-list-wrapper .dropdown-icon-container img {
    cursor: pointer;
    transition: 0.5s;
    transform: none;
}

.setup-guide-list-wrapper.active .dropdown-icon-container img {
    transform: rotateX(180deg);
}

.setup-guide-list-wrapper .setup-guide-content-container {
    position: relative;
    height: 0;
    overflow: hidden;
    overflow-y: auto;
    transition: 0.05s ease-out;
}

.setup-guide-list-wrapper.active .setup-guide-content-container {
    /* border: 1px solid red; */
    height: auto;
}

.setup-guide-description h3 {
    color: #303030;
    font-size: 14px;
    font-weight: 600;
}

.setup-guide-description p {
    color: #303030;
    font-size: 13px;
    padding: 6px 0 16px 0;
}

.form-progress {
    display: flex;
    align-items: baseline;
    max-width: 175px;
}

.form-progress p {
    color: #303030;
    font-size: 12px;
}

.progress-bar-container {
    background-color: #E3E3E3;
    width: 72px;
    height: 4px;
    border-radius: 28px;
    margin-left: 8px;
    position: relative;
    top: -2px;
}

.progress-bar {
    background-color: #1A1A1A;
    border-radius: 28px;
    width: 0%;
    height: 4px;
}


/* Setup Guide Lists  */

.setup-guide-content-container {
    margin: 0 8px 16px 8px;
    
}

.setup-guide-content-container li {
    list-style: none;
}

.setup-guide-content {
    background-color: #FFF;
    border-radius: 8px;
    
    /* padding: 8px; */
    
    /* max-height: 141px;
    min-height: 141px; */
    position: relative;
}

.setup-guide-content.active {
    background-color: #F3F3F3;
    margin-top: 10px;
}

.label {
    display: flex;
    position: relative;
    width: 100%;
    max-height: 40px;
    padding: 16px 8px;
    /* margin-bottom: 20px; */
    /* max-height: 41px; */
    /* align-items: center; */
}

.checkbox-container {
    width: 24px;
    position: relative;
    /* top: -2px; */
    cursor: pointer;
}

.checkbox-container .checkbox.empty {
    /* display: none; */
    position: absolute;
    width: 100%;
    left: 0;
    top: 0;
}

.checkbox-container .checkbox-loader {
    position: absolute;
    width: 100%;
    left: 0;
    top: 0;
}

.checkbox-container .checkbox-loader.active {
    animation-name: loader;
    animation-iteration-count: 1;
    animation-duration: 0.5s;

}

@keyframes loader {
    0%, 67% {
        transform: rotate(0deg);
    }

    33%, 100% {
        transform: rotate(270deg);
    }
    
}

.checkbox-container .checkbox.checked {
    display: none;
    position: absolute;
    width: 100%;
    left: 0;
    top: 0;
}

.checkbox-container .checkbox.checked.active {
    display: block;
    z-index: 100;

}

.list-header {
    font-size: 13px;
    font-weight: 600;
    margin-left: 8px;
    position: relative;
    top: 5px;
}

.list-content-wrapper {
    display: flex;
    justify-content: space-between;
    margin-left: 32px;
    /* padding-top: 16px; */
    position: relative;
    height: 0;
    overflow: hidden;
}

.setup-guide-content.active .list-content-wrapper {
    height: 105px;
    transition: 0.5s;
}

.list-content p {
    color: #616161;
    font-size: 13px;
    font-weight: 500;
    line-height: 19.2px;
    max-width: 484px;
}

.list-content a {
    color: #005BD3;
    text-decoration: none;
    font-size: 14px;
    font-weight: 500;
    /* display: block; */
}

.list-btn,
.add-product-btn {
    background-color: #404040;
    color: #F6F3F6;
    font-size: 12px;
    font-weight: 600;
    padding: 6px 12px;
    margin-top: 16px;
    border: 1.5px solid rgba(255, 255, 255, 0.20);
    border-bottom: none;
    border-radius: 6px;
    outline: 0;
    box-shadow: 0px 0px 0px 1.5px #333, 0px 1px 0px 1.5px #333, 0px 2px 0px 0px #000;
}

.list-btn:hover {
    background-color: #2A2A2A;
}

.list-btn:focus {
    box-shadow: 0px 0px 0px 2px #005BD3, 0px 0px 0px 3px #FFF, 0px 0px 0px 1.5px #333;
}


@media screen and (max-width: 640px) {
    .page-content-wrapper {
        width: 100%;
    }

    .trial-popup {
        display: block;
        position: relative;
        border-radius: 0;
        max-height: 104px;
        min-height: 104px;
    }

    .trial-popup p {
        width: 93%;
        margin-right: 8px;
        line-height: 18.2px;
    }

    .trial-options .plan-btn {
        margin-top: 16px;
    }

    .remove-popup-wrapper img {
        position: absolute;
        right: 10px;
        top: 18px;
    }


    .setup-guide-list-wrapper {
        border-radius: 0;
        max-height: 124px;
    }

    .setup-guide-label {
        max-height: 124px;
        /* min-height: 124px; */
    }

    .setup-guide-description p {
        width: 90%;
    }

    .setup-guide-label .dropdown-icon-container {
        width: 28px;
        min-height: 28px;
        max-height: 28px;
    }

    .setup-guide-label .dropdown-icon-container:hover {
        background-color: #FFF;
    }

    .setup-guide-list-wrapper .dropdown-icon-container {
        position: absolute;
        right: 5px;
        top: 18px;
    }
}

@media screen and (max-width: 767px) {
    .company-logo-desktop {
        display: none;
    }

    .company-logo-mobile {
        display: block;
    }

    .search-input-container {
        width: 63%;
    }

    .userInfo-wrapper {
        min-width: auto;
    }

    .userInfo-wrapper p {
        display: none;
    }

    .list-image-container {
        display: none;
    }

}

